[gd_scene load_steps=7 format=3 uid="uid://brsy1f8urncwj"]

[ext_resource type="Texture2D" uid="uid://ds0obj3xcdnuh" path="res://Assets/Free/Items/Boxes/Box3/Idle.png" id="1_whyuy"]
[ext_resource type="Script" path="res://Object/box_3.gd" id="1_x130s"]
[ext_resource type="Script" path="res://Object/rigid_body_2d.gd" id="2_48fnk"]
[ext_resource type="PackedScene" uid="uid://jblql2elylo1" path="res://Scene/work_calculation.tscn" id="4_qcioh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6pjdj"]
size = Vector2(47, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kwdby"]
size = Vector2(30, 31)

[node name="Box3" type="Area2D"]
script = ExtResource("1_x130s")

[node name="Interactable" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6pjdj")

[node name="Label" type="Label" parent="."]
offset_left = -4.0
offset_top = -51.0
offset_right = 3.0
offset_bottom = -15.0
theme_override_font_sizes/font_size = 26
text = "!"

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2(0.5, -2)
mass = 8.0
script = ExtResource("2_48fnk")

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D"]
position = Vector2(-0.5, 2)
scale = Vector2(1.60714, 1.70833)
texture = ExtResource("1_whyuy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_kwdby")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Work_Calculation" parent="CanvasLayer" instance=ExtResource("4_qcioh")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
